# seqworks

./: .gitignore  README.md  latest.json  package-lock.json  package.json  updater.json
.github/workflows/: build.yml  update-latest-json.yml  updater.yml
src/: app-wide.js  cellxgene.html  dashboard.html  index.html  main.js  pipe_bulk.html  pipe_sc.html  sidebar.html  styles.css  topbar.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  ftp_cmds.rs  lib.rs  main.rs  pipelines.rs  socket.rs  ssh.rs  test.rs
src-tauri/tests/: commands_test.rs
